# unitree_mujoco

./: .gitignore  KEYBOARD_CONTROL.md  LICENSE  MUJOCO_LOG.TXT  README.md  Robot_arm.xml  __init__.py  mujoco_py_test.py  readme.md  readme_zh.md
data/a1/urdf/: a1.urdf  a1.xml
data/a1/xml/: a1.xml
data/aliengo/urdf/: aliengo.urdf  aliengo.xml
data/aliengo/xml/: aliengo.xml
data/go1/urdf/: go1.urdf
data/go1/xml/: go1.xml
data/laikago/meshes/: calf.stl  hip.stl  thigh.stl  thigh_mirror.stl  trunk.stl
data/laikago/urdf/: laikago.urdf  laikago.xml
data/laikago/xml/: laikago.xml
doc/: fun.dio
example/cpp/: CMakeLists.txt  stand_go2.cpp
example/python/: reordering_example.py  ros2_policy_runner_fixed.py  sportmode_full_bridge.py  stand_go2.py
example/python/exported/: policy.onnx  policy.pt  read.py
example/python/params/: agent.pkl  agent.yaml  env.pkl  env.yaml
example/ros2/: CMakeLists.txt  package.xml
example/ros2/include/: motor_crc.h
example/ros2/src/: motor_crc.cpp  stand_go2.cpp
simulate/: CMakeLists.txt  config.yaml
simulate/src/: keyboard_joystick.h  main.cc  param.h  physics_joystick.h  unitree_sdk2_bridge.h
simulate/src/joystick/: jstest.cc
simulate/src/mujoco/: array_safety.h  glfw_adapter.cc  glfw_adapter.h  glfw_corevideo.h  glfw_dispatch.cc  glfw_dispatch.h  platform_ui_adapter.cc  platform_ui_adapter.h  simulate.cc  simulate.h
simulate/src/unitree_sdk2_bridge/: g1_bridge.h  go2_bridge.h  physics_joystick.h  unitree_sdk2_bridge.cc  unitree_sdk2_bridge.h  unitree_sdk2_bridge_base.h
simulate/test/: test_unitree_sdk2.cpp
simulate_python/: config.py  run_sim.sh  unitree_mujoco.py  unitree_sdk2py_bridge.py
simulate_python/test/: gamepad_test.py  test_g1.py  test_unitree_sdk2.py
simulate_python_ros2/: __init__.py  config.py  unitree_mujoco_ros2.py  unitree_ros2_bridge.py
simulate_python_ros2/test/: smoke_ros2_bridge.py
terrain_tool/: gen_g1_rough.py  readme_zh.md  terrain_generator.py
unitree_robots/a2/: a2.xml  qrc_map_flat.xml  qrc_map_sloped.xml  scene_terrain.xml
unitree_robots/a2/meshes/visual/: board_18x600x150.mtl  k_rail_diagonal.mtl  lane_floor.iam  lane_floor.mtl  pallet_step.iam  pallet_step_with_pipe.iam  pvc_pipe_100x1200.mtlZone.Identifier  ramp.iam  stepover.iam  stepover_2.iam
unitree_robots/g1/: g1_23dof.xml  g1_29dof.xml  g1_29dof_with_hand.xml  scene.xml  scene_rough.xml
unitree_robots/go2/: scene_terrain.xml
unitree_robots/go2w/: go2w.xml
unitree_robots/h1/: h1.xml  scene_terrain.xml
unitree_robots/h1_2/: h1_2_handless.xml  scene.xml
unitree_robots/r1/: R1_C++.xml  scene.xml
